--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta name="theme-color" content="#1a1a1a" />
     <meta
       name="description"
-      content="Tarô Teleprompter - Leitura de tarô com reconhecimento de cartas por câmera"
+      content="Leituras de Tarot - Leitura de tarô com reconhecimento de cartas por câmera"
     />
-    <title>Tarô Teleprompter</title>
+    <title>Leituras de Tarot</title>
   </head>
   <body>
     <div id="root"></div>
